--- a/www/templates/modal.html
+++ b/www/templates/modal.html
@@ -45,7 +45,7 @@
 
         <div class="row">
 
-          <div class="col col-sm-4 col-md-3 col-lg-2">
+          <!-- <div class="col col-sm-4 col-md-3 col-lg-2">
             <button
             type="button"
             class="btn btn__default btn__block"
@@ -53,7 +53,7 @@
               <i class="btn--icon  material-icons md-24">arrow_back</i>
               <span class="btn--label">Voltar</span>
             </button>
-          </div>
+          </div> -->
 
           <div class="col col-sm-4 col-md-3 col-lg-2">
             <button
