--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,14 +5,14 @@
 <div class="main">
 
 
-  <div class="container">
+  <div class="login--container">
 
-    <h1>Fourlists</h1>
+    <img src="img/icon.png" alt="">
 
-    <p>Faça login para continuar</p>
+    <h1 class="login--title">Fourlists</h1>
 
     <p>
-      <button class="btn btn__primary btn__block" ng-click="vm.googleLogin()">Login with Google</button>
+      <button class="btn btn__primary btn__block" ng-click="vm.googleLogin()">Faça login com o Google</button>
     </p>
 
   </div>
