--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -4,6 +4,9 @@ $list-2-color: #FFE0B2;
 $list-3-color: #FFF9C4;
 $list-4-color: #DCEDC8;
 
+$lists-col-gutter: 2px;
+
+
 // #LISTS
 //
 .lists {
@@ -12,33 +15,35 @@ $list-4-color: #DCEDC8;
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
-  // padding: 0 8px;
 }
 
-.lists--row {
-  display: flex;
-  width: 100%;
-  height: 50%;
-}
+// .lists--row {
+//   display: flex;
+//   width: 100%;
+//   height: 50%;
+// }
 
 .lists--col {
-  // display: flex;
+  display: flex;
   width: 50%;
   height: 50%;
-  // padding: 8px;
 }
 
 .lists--col:nth-child(1) {
-  padding: 0 4px 4px 0;
+  padding-right: $lists-col-gutter/2;
+  padding-bottom: $lists-col-gutter/2;
 }
 .lists--col:nth-child(2) {
-  padding: 0 0 4px 4px;
+  padding-bottom: $lists-col-gutter/2;
+  padding-left: $lists-col-gutter/2;
 }
 .lists--col:nth-child(3) {
-  padding: 4px 4px 0 0;
+  padding-top: $lists-col-gutter/2;
+  padding-right: $lists-col-gutter/2;
 }
 .lists--col:nth-child(4) {
-  padding: 4px 0 0 4px;
+  padding-top: $lists-col-gutter/2;
+  padding-left: $lists-col-gutter/2;
 }
 
 .list {
@@ -46,9 +51,6 @@ $list-4-color: #DCEDC8;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
-  max-height: none;
-  box-sizing: border-box;
   // border-radius: 2px;
   // box-shadow: 0 1px 3px $black-200;
 
@@ -115,21 +117,20 @@ $list-4-color: #DCEDC8;
   cursor: pointer;
 }
 
-.form_add_task {
-  display: flex;
-  flex-grow: 1;
-}
+// .form_add_task {
+//   display: flex;
+//   flex-grow: 1;
+// }
 
 .list--container {
-  @include container;
-  padding: 0;
+  @include container(0);
   .list__opened & {
     @include container-tablet;
   }
 }
 
 .list--title {
-  padding: 1rem 1rem 0.5rem;
+  padding: 1rem 1rem 0;
   font-size: 0.75rem;
   font-family: 'Roboto Condensed';
   line-height: 1.25;
@@ -147,11 +148,7 @@ $list-4-color: #DCEDC8;
   width: 100%;
   min-height: 48px;
   line-height: 1.25;
-  padding: 0.5rem 1rem;
-
-  &:not(:last-child) {
-    border-bottom: 1px solid $black-50;
-  }
+  border-bottom: 1px solid $black-50;
 
   &:hover {
     background: $black-50;
@@ -162,6 +159,7 @@ $list-4-color: #DCEDC8;
   display: flex;
   flex-grow: 1;
   align-items: center;
+  padding: 0.5rem 1rem;
   font-size: 0.875rem;
   cursor: pointer;
 }
