--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1327,6 +1327,8 @@ html {
   font: 16px/1.25 'Roboto', arial;
   color: rgba(0, 0, 0, 0.8);
   background-color: #fff;
+  text-rendering: optimizeLegibility;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -1423,16 +1425,13 @@ body {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-  -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-          align-items: flex-start;
   -webkit-align-content: flex-start;
       -ms-flex-line-pack: start;
           align-content: flex-start;
 }
 
 .container {
-  padding: 16px;
+  padding: 1rem;
   width: 100%;
 }
 @media (min-width: 768px) {
@@ -1484,8 +1483,15 @@ input[type=text] {
   padding: 0.5rem 1rem;
 }
 
-.login {
-  padding: 0 1rem;
+.login--container {
+  padding: 2rem;
+  width: 100%;
+  text-align: center;
+}
+
+.login--title {
+  margin-top: 1rem;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .lists {
@@ -1500,33 +1506,32 @@ input[type=text] {
   height: 100%;
 }
 
-.lists--row {
+.lists--col {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
-  height: 50%;
-}
-
-.lists--col {
   width: 50%;
   height: 50%;
 }
 
 .lists--col:nth-child(1) {
-  padding: 0 4px 4px 0;
+  padding-right: 1px;
+  padding-bottom: 1px;
 }
 
 .lists--col:nth-child(2) {
-  padding: 0 0 4px 4px;
+  padding-bottom: 1px;
+  padding-left: 1px;
 }
 
 .lists--col:nth-child(3) {
-  padding: 4px 4px 0 0;
+  padding-top: 1px;
+  padding-right: 1px;
 }
 
 .lists--col:nth-child(4) {
-  padding: 4px 0 0 4px;
+  padding-top: 1px;
+  padding-left: 1px;
 }
 
 .list {
@@ -1538,9 +1543,6 @@ input[type=text] {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  height: 100%;
-  max-height: none;
-  box-sizing: border-box;
 }
 .list .header {
   display: none;
@@ -1592,19 +1594,9 @@ input[type=text] {
   cursor: pointer;
 }
 
-.form_add_task {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-}
-
 .list--container {
-  padding: 16px;
-  width: 100%;
   padding: 0;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .list__opened .list--container {
@@ -1614,7 +1606,7 @@ input[type=text] {
 }
 
 .list--title {
-  padding: 1rem 1rem 0.5rem;
+  padding: 1rem 1rem 0;
   font-size: 0.75rem;
   font-family: 'Roboto Condensed';
   line-height: 1.25;
@@ -1633,9 +1625,6 @@ input[type=text] {
   width: 100%;
   min-height: 48px;
   line-height: 1.25;
-  padding: 0.5rem 1rem;
-}
-.list--item:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 .list--item:hover {
@@ -1652,6 +1641,7 @@ input[type=text] {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 0.5rem 1rem;
   font-size: 0.875rem;
   cursor: pointer;
 }
