--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -4,7 +4,7 @@ $list-2-color: #FFE0B2;
 $list-3-color: #FFF9C4;
 $list-4-color: #DCEDC8;
 
-$lists-col-gutter: 2px;
+$lists-col-gutter: 4px;
 
 
 // #LISTS
@@ -26,23 +26,23 @@ $lists-col-gutter: 2px;
 .lists--col {
   display: flex;
   width: 50%;
-  height: 50%;
+  height: calc(50% - 4px);
 }
 
 .lists--col:nth-child(1) {
   padding-right: $lists-col-gutter/2;
-  padding-bottom: $lists-col-gutter/2;
+  // padding-bottom: $lists-col-gutter/2;
 }
 .lists--col:nth-child(2) {
-  padding-bottom: $lists-col-gutter/2;
+  // padding-bottom: $lists-col-gutter/2;
   padding-left: $lists-col-gutter/2;
 }
 .lists--col:nth-child(3) {
-  padding-top: $lists-col-gutter/2;
+  // padding-top: $lists-col-gutter/2;
   padding-right: $lists-col-gutter/2;
 }
 .lists--col:nth-child(4) {
-  padding-top: $lists-col-gutter/2;
+  // padding-top: $lists-col-gutter/2;
   padding-left: $lists-col-gutter/2;
 }
 
@@ -130,10 +130,13 @@ $lists-col-gutter: 2px;
 }
 
 .list--title {
-  padding: 1rem 1rem 0;
+  display: flex;
+  align-items: flex-end;
+  height: 2.5rem;
+  padding: 1rem 1rem 0.5rem;
   font-size: 0.75rem;
   font-family: 'Roboto Condensed';
-  line-height: 1.25;
+  line-height: 1rem;
   text-transform: uppercase;
   font-weight: 700;
   color: $text_light_color;
@@ -145,10 +148,11 @@ $lists-col-gutter: 2px;
 
 .list--item {
   display: flex;
+  align-items: center;
   width: 100%;
-  min-height: 48px;
-  line-height: 1.25;
+  min-height: $baseline*2;
   border-bottom: 1px solid $black-50;
+  cursor: pointer;
 
   &:hover {
     background: $black-50;
@@ -156,12 +160,11 @@ $lists-col-gutter: 2px;
 }
 
 .list--item--label {
-  display: flex;
-  flex-grow: 1;
-  align-items: center;
-  padding: 0.5rem 1rem;
+  padding: 0 1rem;
   font-size: 0.875rem;
-  cursor: pointer;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 
@@ -173,7 +176,7 @@ $lists-col-gutter: 2px;
     background: $color;
   }
 }
-.list_button__1 { @include list_button($list-1-color); }
-.list_button__2 { @include list_button($list-2-color); }
-.list_button__3 { @include list_button($list-3-color); }
-.list_button__4 { @include list_button($list-4-color); }
+.btn.list_button__1 { @include list_button($list-1-color); }
+.btn.list_button__2 { @include list_button($list-2-color); }
+.btn.list_button__3 { @include list_button($list-3-color); }
+.btn.list_button__4 { @include list_button($list-4-color); }
