--- a/www/templates/modal.html
+++ b/www/templates/modal.html
@@ -1,12 +1,12 @@
 <form class="section" name="addTaskForm" novalidate>
 
-  <header class="header">
+  <header class="header --shadow">
 
-    <div class="header--group">
-      <a class="header--btn" ng-click="goBack()">
+    <div class="group --left">
+      <a class="btn --icon" ng-click="goBack()">
         <i class="material-icons">arrow_back</i>
       </a>
-      <h1 class="header--title">{{vm.pageTitle}}</h1>
+      <h1 class="title">{{vm.pageTitle}}</h1>
     </div>
 
   </header>
@@ -15,81 +15,60 @@
 
     <div class="container">
 
-      <div class="form_field">
-        <!-- <label for="title">Título</label> -->
-        <input id="title" type="text" ng-model="vm.task.title" placeholder="Título" required>
+      <div class="text_field">
+        <label for="title" class="label --text_field">Título*</label>
+        <input id="title" class="text_input" type="text" ng-model="vm.task.title" required>
       </div>
 
-      <div class="form_field">
-        <!-- <label for="description">Descrição</label> -->
-        <textarea id="description" ng-model="vm.task.description" placeholder="Descrição"></textarea>
+      <div class="text_field">
+        <label for="description" class="label --text_field">Detalhes</label>
+        <!-- <div id="description" class="text_input" ng-model="vm.task.description" contenteditable></div> -->
+        <textarea id="description" class="text_input" ng-model="vm.task.description"></textarea>
       </div>
-
-      <br>
 
       <div class="row">
         <div class="col" ng-repeat="list in vm.lists">
           <button
           type="button"
-          class="btn btn__icon btn__default  list_button list_button__{{$index+1}}"
+          class="btn --icon --default  list_button list_button__{{$index+1}}"
           ng-click="vm.setList(list.id)">
-            <i class="btn--icon  material-icons md-24 md-dark md-inactive" ng-show="vm.task.list_id == $index+1">check</i>
-          </button> <!-- ng-class="{'active': vm.task.list_id = list.id}" -->
+            <i class="material-icons md-24 md-dark md-inactive" ng-show="vm.task.list_id == $index+1">check</i>
+          </button>
         </div>
       </div>
 
     </div>
 
-    <div class="footer">
-      <div class="container">
+    <div class="form_footer">
 
-        <div class="row">
+      <button
+      type="submit"
+      class="btn --primary"
+      ng-click="vm.save(vm.task)"
+      ng-disabled="addTaskForm.$invalid"
+      ng-if="vm.isEdit()">
+        <!-- <i class="btn--icon  material-icons md-24">cloud_upload</i> -->
+        <span class="btn--label">Salvar</span>
+      </button>
 
-          <!-- <div class="col col-sm-4 col-md-3 col-lg-2">
-            <button
-            type="button"
-            class="btn btn__default btn__block"
-            ng-click="goBack()">
-              <i class="btn--icon  material-icons md-24">arrow_back</i>
-              <span class="btn--label">Voltar</span>
-            </button>
-          </div> -->
+      <button
+      type="submit"
+      class="btn --primary"
+      ng-click="vm.add(vm.task)"
+      ng-disabled="addTaskForm.$invalid"
+      ng-if="!vm.isEdit()">
+        <!-- <i class="btn--icon  material-icons md-24">cloud_upload</i> -->
+        <span class="btn--label">Adicionar</span>
+      </button>
 
-          <div class="col col-sm-4 col-md-3 col-lg-2">
-            <button
-            type="submit"
-            class="btn btn__primary btn__block"
-            ng-click="vm.save(vm.task)"
-            ng-disabled="addTaskForm.$invalid"
-            ng-if="vm.isEdit()">
-              <i class="btn--icon  material-icons md-24">cloud_upload</i>
-              <span class="btn--label">Salvar alterações</span>
-            </button>
+      <button
+      class="btn"
+      ng-click="vm.remove(vm.task)"
+      ng-if="vm.isEdit()">
+        <!-- <i class="btn--icon  material-icons md-24">delete</i> -->
+        <span class="btn--label">Remover</span>
+      </button>
 
-            <button
-            type="submit"
-            class="btn btn__primary btn__block"
-            ng-click="vm.add(vm.task)"
-            ng-disabled="addTaskForm.$invalid"
-            ng-if="!vm.isEdit()">
-              <i class="btn--icon  material-icons md-24">cloud_upload</i>
-              <span class="btn--label">Adicionar</span>
-            </button>
-          </div>
-
-          <div class="col col-sm-4 col-md-3 col-lg-2">
-            <button
-            class="btn btn__block"
-            ng-click="vm.remove(vm.task)"
-            ng-if="vm.isEdit()">
-              <i class="btn--icon  material-icons md-24">delete</i>
-              <span class="btn--label">Remover</span>
-            </button>
-          </div>
-
-        </div>
-
-      </div>
     </div>
 
   </main>
