--- a/scss/_base2.scss
+++ b/scss/_base2.scss
@@ -281,7 +281,7 @@ a {
     color: rgba(#000, 0.4);
     font-size: .875rem;
     font-weight: 500;
-    line-height: $baseline;
+    line-height: 1rem;
   }
 }
 
