--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -26,23 +26,23 @@ $lists-col-gutter: 4px;
 .lists--col {
   display: flex;
   width: 50%;
-  height: calc(50% - 4px);
+  height: 50%;
 }
 
 .lists--col:nth-child(1) {
   padding-right: $lists-col-gutter/2;
-  // padding-bottom: $lists-col-gutter/2;
+  padding-bottom: $lists-col-gutter/2;
 }
 .lists--col:nth-child(2) {
-  // padding-bottom: $lists-col-gutter/2;
+  padding-bottom: $lists-col-gutter/2;
   padding-left: $lists-col-gutter/2;
 }
 .lists--col:nth-child(3) {
-  // padding-top: $lists-col-gutter/2;
+  padding-top: $lists-col-gutter/2;
   padding-right: $lists-col-gutter/2;
 }
 .lists--col:nth-child(4) {
-  // padding-top: $lists-col-gutter/2;
+  padding-top: $lists-col-gutter/2;
   padding-left: $lists-col-gutter/2;
 }
 
@@ -51,6 +51,7 @@ $lists-col-gutter: 4px;
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow: hidden;
   // border-radius: 2px;
   // box-shadow: 0 1px 3px $black-200;
 
