--- a/www/css/style.css
+++ b/www/css/style.css
@@ -80,23 +80,9 @@ html {
   font-size: 16px;
   line-height: 24px;
   color: rgba(0, 0, 0, 0.8);
-  background: rgba(0, 0, 0, 0.025);
+  background: transparent;
   text-rendering: optimizeLegibility;
   -webkit-tap-highlight-color: transparent;
-}
-html:before {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.15) 1px, transparent 1px), linear-gradient(to left, rgba(255, 0, 0, 0.15) 1px, transparent 1px);
-  background-position: left -1px;
-  background-repeat: repeat;
-  background-size: 8px 8px;
-  pointer-events: none;
 }
 
 body {
@@ -333,7 +319,7 @@ a {
   color: rgba(0, 0, 0, 0.4);
   font-size: .875rem;
   font-weight: 500;
-  line-height: 24px;
+  line-height: 1rem;
 }
 
 .text_field.--focused > .label.--text_field {
@@ -350,7 +336,7 @@ a {
 .checkbox {
   display: block;
   width: 100%;
-  height: 2rem;
+  height: 2.5rem;
   padding: 0 0;
   font: inherit;
   font-size: 1.125rem;
@@ -494,22 +480,26 @@ input[type='checkbox'] {
   display: -ms-flexbox;
   display: flex;
   width: 50%;
-  height: calc(50% - 4px);
+  height: 50%;
 }
 
 .lists--col:nth-child(1) {
   padding-right: 2px;
+  padding-bottom: 2px;
 }
 
 .lists--col:nth-child(2) {
+  padding-bottom: 2px;
   padding-left: 2px;
 }
 
 .lists--col:nth-child(3) {
+  padding-top: 2px;
   padding-right: 2px;
 }
 
 .lists--col:nth-child(4) {
+  padding-top: 2px;
   padding-left: 2px;
 }
 
@@ -522,6 +512,7 @@ input[type='checkbox'] {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
+  overflow: hidden;
 }
 .list .header {
   display: none;
