--- a/www/css/style.css
+++ b/www/css/style.css
@@ -83,6 +83,8 @@ html {
   background: transparent;
   text-rendering: optimizeLegibility;
   -webkit-tap-highlight-color: transparent;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
 }
 
 body {
