--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -7,12 +7,12 @@
 
   <div class="login--container">
 
-    <img src="img/icon.png" alt="">
-
     <h1 class="login--title">Fourlists</h1>
 
+    <img src="img/icon.png" alt="Fourlists">
+
     <p>
-      <button class="btn btn__primary btn__block" ng-click="vm.googleLogin()">Faça login com o Google</button>
+      <button class="btn --primary --block" ng-click="vm.googleLogin()">Faça login com o Google</button>
     </p>
 
   </div>
