--- a/www/css/style.css
+++ b/www/css/style.css
@@ -108,7 +108,7 @@ h2 {
   font-weight: 400;
 }
 
-h3 {
+h3, .login--title {
   margin-top: 24px;
   margin-bottom: 24px;
   font-size: 2.5rem;
@@ -425,21 +425,25 @@ input[type='checkbox'] {
   vertical-align: middle;
   transition: all 200ms linear;
 }
-.btn.--default, .btn.--icon:hover {
+.btn.--default {
   color: rgba(0, 0, 0, 0.6);
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 .btn.--primary {
   color: #fff;
   background: #567;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 .btn.--icon {
   width: 3.5rem;
   padding: 0;
   color: rgba(0, 0, 0, 0.4);
   border-radius: 50%;
+}
+.btn.--icon:hover {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.btn.--default, .btn.--primary {
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .row {
@@ -455,13 +459,15 @@ input[type='checkbox'] {
 }
 
 .login--container {
-  padding: 2rem;
+  padding: 2rem 1rem;
   width: 100%;
   text-align: center;
 }
 
 .login--title {
-  margin-top: 1rem;
+  font-weight: 300;
+  font-family: Roboto Condensed;
+  letter-spacing: -0.5px;
   color: rgba(0, 0, 0, 0.6);
 }
 
