--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@
 // @import 'animate';
 @import 'variables';
 @import 'base2';
-// @import 'grid';
+@import 'grid';
 @import 'login';
 @import 'lists';
 // @import 'modal';
